--- a/src/components/LandingPage/LandingPage.css
+++ b/src/components/LandingPage/LandingPage.css
@@ -1,84 +1,84 @@
-.landing-page-container.dark-theme {
-  background-color: #1a202c;
-  color: #ffffff;
-  height: 100vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+@media (max-width: 768px) {
 }
 
-.content-container {
-  text-align: center;
-}
+@media (min-width: 769px) {
+  .landing-page-container.dark-theme {
+    background-color: #1a202c;
+    color: #ffffff;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100vw;
+  }
 
-.logo {
-  position: relative;
-  left: 20%;
-  width: 200px;
-  margin-bottom: 24px;
-}
+  .content-container {
+    text-align: center;
+  }
 
-.heading {
-  margin-bottom: 16px;
-}
+  .logo {
+    position: relative;
+    left: 20%;
+    width: 200px;
+    margin-bottom: 24px;
+  }
 
-.description {
-  margin-bottom: 24px;
-}
+  .heading {
+    margin-bottom: 16px;
+  }
 
-.cta-button {
-  margin-top: 24px;
-  padding: 12px 24px;
-  border-radius: 9999px;
-  background-color: #3245a8;
-  color: #ffffff;
-  font-size: 1.2rem;
-  font-weight: bold;
-  text-transform: uppercase;
-  transition: background-color 0.3s ease, transform 0.2s ease;
-  position: relative;
-  top: 40vh;
-  right: -5vw;
-}
+  .description {
+    margin-bottom: 24px;
+  }
 
-.cta-button:hover {
-  background-color: #2c3a8c;
-  transform: scale(1.05);
-}
+  .cta-button {
+    margin-top: 5%;
+    padding: 1% 3%;
+    border-radius: 9999px;
+    background-color: #3245a8;
+    color: #ffffff;
+    font-size: 1.2rem;
+    font-weight: bold;
+    text-transform: uppercase;
+    transition: background-color 0.3s ease, transform 0.2s ease;
+    position: relative;
+    top: 40vh;
+    right: -5vw;
+  }
 
-.main {
-  height: 100vh;
-  width: 99.1vw;
-}
+  .cta-button:hover {
+    background-color: #2c3a8c;
+    transform: scale(1.05);
+  }
 
-.blocksoc {
-  font-size: 6rem;
-  color: wheat;
-  position: relative;
-  top: 35vh;
-  left: 5vw;
-  background: linear-gradient(
-    to right,
-    #8b5cf6,
-    #22d3ee,
-    #2dd3cf,
-    #3ecc9f,
-    #5efb9d
-  );
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-}
+  .main {
+    height: 100vh;
+    width: 100vw;
+  }
 
-.text {
-  font-size: 2rem;
-  color: whitesmoke;
-  position: relative;
-  top: 35vh;
-  left: 5vw;
-}
+  .blocksoc {
+    font-size: 5rem;
+    color: wheat;
+    position: relative;
+    top: 35vh;
+    left: 5vw;
+    background: linear-gradient(
+      to right,
+      #8b5cf6,
+      #22d3ee,
+      #2dd3cf,
+      #3ecc9f,
+      #5efb9d
+    );
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+  }
 
-.hello {
-  color: whitesmoke;
-  position: relative;
-  top: 50vh;
+  .text {
+    font-size: 2rem;
+    color: whitesmoke;
+    position: relative;
+    top: 35vh;
+    left: 5vw;
+  }
 }
